<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_id"
            style="@style/TextStyle.Weight"
           android:text="@string/app_name"
            />

        <TextView
            android:id="@+id/tv_name"
            style="@style/TextStyle.Weight"
            android:text="@string/app_name"
            />

        <TextView
            android:id="@+id/tv_age"
            style="@style/TextStyle.Weight"
            android:text="@string/app_name"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        />

    <Button
        android:id="@+id/event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event"
        />
    <Button
        android:id="@+id/event_main_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_main"
        />
    <Button
        android:id="@+id/event_bg_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_bg"
        />
    <Button
        android:id="@+id/event_async_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_async"
        />

</LinearLayout>